// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetModal snapshot(Draw) 1`] = `
<div
  className="sc-gTRrQi koWzUg"
>
  <div
    className="sc-ewnqHT kwQNus"
  >
    <p
      className="sc-fFGjHI gAWJpf"
    >
      Game Result
    </p>
    <p
      className="sc-dicizt dxkcQE"
    >
      Draw!
    </p>
    <button
      className="sc-bgqQcB dqeAly"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 1) 1`] = `
<div
  className="sc-gTRrQi koWzUg"
>
  <div
    className="sc-ewnqHT kwQNus"
  >
    <p
      className="sc-fFGjHI gAWJpf"
    >
      Game Result
    </p>
    <p
      className="sc-dicizt dxkcQE"
    >
      Player 1 win!
    </p>
    <button
      className="sc-bgqQcB dqeAly"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 2) 1`] = `
<div
  className="sc-gTRrQi koWzUg"
>
  <div
    className="sc-ewnqHT kwQNus"
  >
    <p
      className="sc-fFGjHI gAWJpf"
    >
      Game Result
    </p>
    <p
      className="sc-dicizt dxkcQE"
    >
      Player 2 win!
    </p>
    <button
      className="sc-bgqQcB dqeAly"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;
